:fallen_leaf: refactor(git): add a line to gitignore to exclude global variables

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ plugins/mitogen
 
 # Ansible inventory
 inventory/*
+!inventory/group_vars
 !inventory/sample-inventory.yml
 inventory/*/artifacts/
 
