--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -1,42 +1,101 @@
 ---
 - name: Create kafka group
-  group:
+  become: true
+  ansible.builtin.group:
     name: '{{ kafka_group }}'
     state: present
     system: yes
+  tags:
+    - install
+    - scale
   
 - name: Create kafka user
-  user:
+  become: true
+  ansible.builtin.user:
     name: '{{ kafka_user }}'
     group: '{{ kafka_group }}'
     state: present
     createhome: no
     system: yes
+  tags:
+    - install
+    - scale
 
 - name: Create kafka directory
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ kafka_installation_path }}"
     state: directory
     owner: "{{ kafka_user }}"
     group: "{{ kafka_user }}"
     mode: 0755
     recurse: true
+  tags:
+    - install
+    - scale
 
-- name: download | Download 
-  import_tasks: download.yml
-  when:
-    - not skip_downloads|default(false)
+- name: Check if Kafka tar file exists
+  ansible.builtin.stat:
+    path: "/tmp/kafka_{{ scala_version }}-{{ kafka_version }}.tgz"
+  register: kafka_tar_file_stat
+  tags:
+    - install
+    - scale
 
-# TODO: Fix the problem of not unarchiving the kafka tar file
+- name: Set Kafka tar file variable
+  set_fact:
+    kafka_tar_file:
+      dest: "/tmp/kafka_{{ scala_version }}-{{ kafka_version }}.tgz"
+  when: kafka_tar_file_stat.stat.exists
+  tags:
+    - install
+    - scale
+
+- name: Download Kafka tar file
+  become: true
+  ansible.builtin.get_url:
+    url: "https://downloads.apache.org/kafka/{{ kafka_version }}/kafka_{{ scala_version }}-{{ kafka_version }}.tgz"
+    dest: /tmp
+    owner: "{{ kafka_user }}"
+    group: "{{ kafka_user }}"
+    mode: 0755
+  register: kafka_tar_file
+  when: not kafka_tar_file_stat.stat.exists
+  tags:
+    - install
+    - scale
+
+- name: Set kafka_tar_file value
+  set_fact:
+    kafka_tar_file: "{{ kafka_tar_file.dest }}"
+  when: not kafka_tar_file_stat.stat.exists
+  tags:
+    - install
+    - scale
+
+- name: Set kafka_tar_file value
+  set_fact:
+    kafka_tar_file: "{{ kafka_tar_file_stat.stat.path }}"
+  when: kafka_tar_file_stat.stat.exists
+  tags:
+    - install
+    - scale
+
 - name: Extract Kafka tar file
-  unarchive:
+  become: true
+  ansible.builtin.unarchive:
     remote_src: true
-    src: "{{ kafka_tar_file.dest }}"
-    dest: " {{ kafka_installation_path }}"
-    extra_opts: [--strip-components=1]
-    creates: "{{ kafka_installation_path }}"
+    src: "{{ kafka_tar_file }}"
+    dest: "{{ kafka_installation_path }}"
+    extra_opts: 
+      - --strip-components=1
+    creates: "{{ kafka_installation_path }}/bin/kafka-storage.sh"
+    owner: "{{ kafka_user }}"
+    group: "{{ kafka_group }}"
   register: _extract
+  tags:
+    - install
+    - scale
 
 - name: configuration | set log directory and cluster metadata
   import_tasks: configuration.yml
-
